# Server

./: Build.sh  CMakeLists.txt  base.sln
Base/: CMakeLists.txt  base.vcxproj  base.vcxproj.filters
Build.Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Build.Debug/Base/: Makefile  cmake_install.cmake
Build.Debug/Test/: Makefile  Test_CXX_cotire.cmake  cmake_install.cmake
Build.Debug/Test/cotire/: Test_CXX_prefix.cxx  Test_CXX_prefix.hxx
Run/Test/: Test
Test/: CMakeLists.txt  test.sln  test.vcxproj  test.vcxproj.filters
Test/Src/base/: stdafx.h
Test/Src/deprive/: Father.h  Son.h  main.cpp
